force-app/main/default/objects/Store_Locator__c/Store_Locator__c.object-meta.xml
<CustomObject>
    <label>Store Locator</label>
    <nameField>
        <label>Store Locator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Locator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>