force-app/main/default/objects/Store_Locator__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Locator</relationshipLabel>
    <relationshipName>Store_Locator</relationshipName>
    <type>Lookup</type>
</CustomField>