force-app/main/default/objects/Store_Locator__c/fields/Is_Promoted__c.field-meta.xml
<CustomField>
    <fullName>Is_Promoted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Promoted</label>
    <type>Checkbox</type>
</CustomField>