force-app/main/default/objects/Store_Locator__c/fields/lat__c.field-meta.xml
<CustomField>
    <fullName>lat__c</fullName>
    <label>lat</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>