force-app/main/default/objects/Store_Locator__c/fields/lng__c.field-meta.xml
<CustomField>
    <fullName>lng__c</fullName>
    <label>lng</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>