force-app/main/default/objects/Store_Locator__c/fields/Steak_Available__c.field-meta.xml
<CustomField>
    <fullName>Steak_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steak Available</label>
    <type>Checkbox</type>
</CustomField>